weeek first assignment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="Welcome to our exhilarating rafting adventure! Embark on a thrilling journey through the untamed rivers of Sierra Leone, where cascading rapids and breathtaking scenery await. Whether you're an experienced rafter seeking the ultimate adrenaline rush or a novice looking for an unforgettable outdoor experience, our expert guides are here to ensure your safety and enjoyment every step of the way. Feel the rush of adrenaline as you navigate through the heart-pounding rapids, surrounded by the lush greenery of the African wilderness. Along the way, immerse yourself in the beauty of the landscape, with towering cliffs, vibrant wildlife, and pristine waterfalls at every turn. With our top-of-the-line equipment and professional staff, you can relax and focus on the thrill of the ride. Join us for an unforgettable rafting adventure in Sierra Leone – where every twist and turn promises an exhilarating experience you'll never forget!" content="Osman Kanu's rafting website">
+    <meta name="Description" content="Welcome to our exhilarating rafting adventure! Embark on a thrilling journey through the untamed rivers of Sierra Leone, where cascading rapids and breathtaking scenery await. Whether you're an experienced rafter seeking the ultimate adrenaline rush or a novice looking for an unforgettable outdoor experience, our expert guides are here to ensure your safety and enjoyment every step of the way. Feel the rush of adrenaline as you navigate through the heart-pounding rapids, surrounded by the lush greenery of the African wilderness. Along the way, immerse yourself in the beauty of the landscape, with towering cliffs, vibrant wildlife, and pristine waterfalls at every turn. With our top-of-the-line equipment and professional staff, you can relax and focus on the thrill of the ride. Join us for an unforgettable rafting adventure in Sierra Leone – where every twist and turn promises an exhilarating experience you'll never forget!">
     <meta name="author" content="Osman Kanu">
     <title>Osman Kanu | WDD 130</title>
     <link rel="stylesheet" href="week02/styles/style.css">
@@ -14,20 +14,29 @@
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://linkedin.com">LinkedIn</a> 
+        <a href="https://facebook.com">Facebook</a> 
         </nav>
     </header>
     <main>
         <h1>Osman Kanu | WDD 130</h1>
         <img src="images/osman.jpg" alt="Osman and daughter" width="200" class="main_img">
         <p>I am interested in learning Web fundamentals in this course. The web has evolved and it has contribted in many ways of our life. I am going to master both front end and backend technologies of the web hence, I want to become a fullstack developer</p>
+        <!-- Favorite Temples List -->
+        <ul>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng" target="_blank">Accra Ghana Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/kyiv-ukraine-temple?lang=eng" target="_blank">Kyiv Ukraine Temple</a></li>
+        </ul>
     </main>
     <aside>
-        <h2>Sierra Leone</h2>
+        <h2 class="state-country-heading">Sierra Leone</h2>
         <img src="https://th.bing.com/th/id/OIP.96nSs6qNhpM1uBKG_2J7bQHaEK?rs=1&pid=ImgDetMain" alt="A beautiful scene in Sierra Leone" class="scenery">
         <p>Nestled between the Atlantic Ocean and lush, verdant forests, Sierra Leone's landscape is a symphony of natural beauty. Inland, majestic mountains and rolling hills adorned with emerald-green foliage give sanctuary to a diverse array of wildlife, from elusive chimpanzees to rare pygmy hippos. Along the coastline, powdery sands of Lumley Beach and Tokeh Beach stretch into the distance, inviting travelers to bask in the warmth of the tropical sun and explore the azure depths through thrilling activities like snorkeling and diving. As the sun sets, painting the sky with vibrant hues, the unparalleled beauty of Sierra Leone's scenery reveals itself, offering travelers unforgettable moments and a deep connection to nature's awe-inspiring artistry.</p>
     </aside>
     <footer>
         <p>©️2024 🌴Osman Kanu🌴Sierra Leone</p>
     </footer>
+      <!-- Last modified: March 26, 2024 -->
 </body>
 </html>
