Welcome to River Rapids Rafting

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,8 +29,9 @@
         </div>
         <hr>
         <article>
+            <h2>Welcome to River Rapids Rafting Co.!</h2>
             <img src="images/img6.jpg" alt="Happy Client">
-            <p>Welcome to River Rapids Rafting Co.! Our mission is to provide unforgettable adventures on the wild rivers.</p>
+            <p>Our mission is to provide unforgettable adventures on the wild rivers.</p>
         </article>
         <section>
             <h2>History</h2>
