--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="week02/styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="grid">
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
@@ -18,11 +18,12 @@
         <a href="https://facebook.com">Facebook</a> 
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Osman Kanu | WDD 130</h1>
         <img src="images/osman.jpg" alt="Osman and daughter" width="200" class="main_img">
         <p>I am interested in learning Web fundamentals in this course. The web has evolved and it has contribted in many ways of our life. I am going to master both front end and backend technologies of the web hence, I want to become a fullstack developer</p>
-        <!-- Favorite Temples List -->
+       
         <ul>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/accra-ghana-temple?lang=eng" target="_blank">Accra Ghana Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng" target="_blank">Salt Lake Temple</a></li>
@@ -34,7 +35,8 @@
         <img src="https://th.bing.com/th/id/OIP.96nSs6qNhpM1uBKG_2J7bQHaEK?rs=1&pid=ImgDetMain" alt="A beautiful scene in Sierra Leone" class="scenery">
         <p>Nestled between the Atlantic Ocean and lush, verdant forests, Sierra Leone's landscape is a symphony of natural beauty. Inland, majestic mountains and rolling hills adorned with emerald-green foliage give sanctuary to a diverse array of wildlife, from elusive chimpanzees to rare pygmy hippos. Along the coastline, powdery sands of Lumley Beach and Tokeh Beach stretch into the distance, inviting travelers to bask in the warmth of the tropical sun and explore the azure depths through thrilling activities like snorkeling and diving. As the sun sets, painting the sky with vibrant hues, the unparalleled beauty of Sierra Leone's scenery reveals itself, offering travelers unforgettable moments and a deep connection to nature's awe-inspiring artistry.</p>
     </aside>
-    <footer>
+</div>
+    <footer class="grid">
         <p>©️2024 🌴Osman Kanu🌴Sierra Leone</p>
     </footer>
       <!-- Last modified: March 26, 2024 -->
