--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,9 +14,9 @@
         <nav>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Trips</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
