--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,9 +13,9 @@
         <img class="logo" src="images/sf_logo.png" alt="Logo">
         <nav>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Trips</a></li>
+                <li><a href="trip.html">Trips</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -40,7 +40,6 @@
         
         <h2>Adventure Awaits You!</h2>
         <section class="adventures-section">
-            
             <figure>
                 <img src="images/img7.jpg" alt="Rafting Image 1">
                 <figcaption>Lumley Water</figcaption>
@@ -53,15 +52,6 @@
                 <img src="images/img3.jpg" alt="Rafting Image 3">
                 <figcaption>Half Day Adventure</figcaption>
             </figure>
-            <figure>
-                <img src="images/img4.jpg" alt="Rafting Image 4">
-                <figcaption>White Water </figcaption>
-            </figure>
-            <figure>
-                <img src="images/img5.jpg" alt="Rafting Image 5">
-                <figcaption>Wild Rapids Excursion</figcaption>
-            </figure>
-        </section>
     </main>
     <footer>
         <p>&copy; <span id="year">2024</span> River Rapids Rafting Co. | Developed by Osman Kanu</p>
