--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,6 +40,7 @@
         
         <h2>Adventure Awaits You!</h2>
         <section class="adventures-section">
+            <h2>Explore our Adventures</h2>
             <figure>
                 <img src="images/img7.jpg" alt="Rafting Image 1">
                 <figcaption>Lumley Water</figcaption>
@@ -52,6 +53,7 @@
                 <img src="images/img3.jpg" alt="Rafting Image 3">
                 <figcaption>Half Day Adventure</figcaption>
             </figure>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="year">2024</span> River Rapids Rafting Co. | Developed by Osman Kanu</p>
