--- a/wwr/index.html
+++ b/wwr/index.html
@@ -59,6 +59,8 @@
                     </div>
                 </div>
             </section>     
+        </main>
+    </div>
     
     <footer>
         <p>&copy; <span id="year">2024</span> River Rapids Rafting Co. | Developed by Osman Kanu</p>
