--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Experience the Thrill of River Rafting in Sierra Leone with River Rapids Rafting Co. Discover breathtaking adventures and expert guides for an unforgettable outdoor experience.">
     <meta name="author" content="Osman Kanu">
-    <title>River Rafting Adventures in Sierra Leone | Contact Us</title>
+    <title> Contact Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
