--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Welcome to our exhilarating rafting adventure! Explore the untamed rivers of Sierra Leone with us.">
     <meta name="author" content="Osman Kanu">
-    <title>River Rapids Rafting Co.</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
@@ -68,6 +68,10 @@
             <a href="https://www.facebook.com" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
             <a href="https://www.twitter.com" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
             <a href="https://www.instagram.com" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+
+            <div>
+                <a href="images/indx.png" target="_blank">Wireframe</a>
+            </div>
         </div>
     </footer>
 
