--- a/wwr/trip.html
+++ b/wwr/trip.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Explore our exciting rafting trips! Choose from our Silver, Gold, and Diamond packages for the ultimate adventure.">
     <meta name="author" content="Your Name">
-    <title>River Rapids Rafting Co. | Trips</title>
+    <title>trip</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
