--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="Welcome to our exhilarating rafting adventure! Embark on a thrilling journey through the untamed rivers of Sierra Leone, where cascading rapids and breathtaking scenery await. Whether you're an experienced rafter seeking the ultimate adrenaline rush or a novice looking for an unforgettable outdoor experience, our expert guides are here to ensure your safety and enjoyment every step of the way. Feel the rush of adrenaline as you navigate through the heart-pounding rapids, surrounded by the lush greenery of the African wilderness. Along the way, immerse yourself in the beauty of the landscape, with towering cliffs, vibrant wildlife, and pristine waterfalls at every turn. With our top-of-the-line equipment and professional staff, you can relax and focus on the thrill of the ride. Join us for an unforgettable rafting adventure in Sierra Leone – where every twist and turn promises an exhilarating experience you'll never forget!">
     <meta name="author" content="Osman Kanu">
-    <title>Osman Kanu | WDD 130</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
